--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>swivvecode</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="me.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
@@ -38,9 +39,10 @@
     <!-- home section start -->
    
     <section class="home" id="home">
-         <video src="World - 2.mp4"muted loop autoplay></video>
+        
         
         <div class="max-width">
+             <video src="World - 2.mp4"muted loop autoplay></video>
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">stoudcodes</div>
