--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>swivvecode</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="me.jpg">
+    <link rel="icon" href="blob.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
@@ -59,7 +59,7 @@
             <h2 class="title">About the founder</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="me.jpg" alt="">
+                    <img src="blob.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Brandon and I'm a <span class="typing-2"></span></div>
