--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h2 class="title">About the founder</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="blob.jpg" alt="">
+                    <img src="blob.png" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Brandon and I'm a <span class="typing-2"></span></div>
