--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 
   gtag('config', 'G-H71173RTPK');
 </script>
+    <video autoplay muted loop id="myVideo">
+  <source src="" type="video/mp4">
+</video>
 
 </head>
 <body>
