--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 	<main>
-		<div class="intro">marsvile coming soon!</div>
+		<div class="intro">marsvile 2.0 by stoud & zeron coming soon!</div>
 		<div class="tagline">All-Star Dev | Code Fanatics | the Band | Bleh</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
