--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 </head>
 <body>
 	<main>
-		<div class="intro">marsvile 2.0 by stoud & zeron coming soon!</div>
+		<div class="intro">marsvile 2.0 by stoud & zeron coming soon!
+		<br>this is THE MARANDA SCHOOL'S band website currently under construction.
+		<br>we promise you something liit!!<br>
+		keep on checking</div>
 		<div class="tagline">All-Star Dev | Code Fanatics | the Band | Bleh</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
@@ -45,9 +48,9 @@
         <i class="fab fa-stack-overflow" aria-hidden="true" title="StackOverflow"></i>
         <span class="sr-only">StackOverflow</span>
       </a>
-      <a target="_blank" href="https://www.linkedin.com/in/stoud">
-        <i class="fab fa-linkedin" aria-hidden="true" title="LinkedIn"></i>
-        <span class="sr-only">LinkedIn</span>
+      <a target="_blank" href="https://www.instagram.com/_.stoud._">
+        <i class="fab fa-instagram" aria-hidden="true" title="instagram"></i>
+        <span class="sr-only">IG</span>
       </a>
       <a target="_blank" href="https://medium.com/stoud">
         <i class="fab fa-medium" aria-hidden="true" title="Medium"></i>
