--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ngwatify</title>
+    <title>MARSVILE</title>
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -27,7 +27,7 @@
 
 <header>
 
-    <a href="#" class="logo"><span>ngwat</span>ify</a>
+    <a href="#" class="logo"><span>MARA</span>NDA</a>
 
     <input type="checkbox" id="menu-bar">
     <label for="menu-bar" class="fas fa-bars"></label>
@@ -50,8 +50,8 @@
 <section class="home" id="home">
 
     <div class="content">
-        <h3>-NGWATIFY-the future of porn <span>showcase</span></h3>
-        <p>ngwatify is an upcoming porn netflix site that is set to takeoff early 2023</p>
+        <h3>-MARSVILE THE CODE HUB<span>showcase</span></h3>
+        <p>MARSVILE is an upcoming CODE LAB site that is set to takeoff early 2023</p>
         <a href="#" class="btn">be notified now</a>
     </div>
 
@@ -111,7 +111,7 @@
         </div>
 
         <div class="content">
-            <h3>Easy And Perfect Solution to quench your sexual thirst</h3>
+            <h3>Easy And Perfect Solution to quench your coding thirst</h3>
             <p>.</p>
             <p>.</p>
             <div class="buttons">
@@ -151,7 +151,7 @@
             <i class="fas fa-quote-right"></i>
             <div class="user">
                 <img src="" alt="">
-                <h3>denniss musyoki</h3>
+                <h3>Asiga Wycliffe</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -160,7 +160,7 @@
                     <i class="fas fa-star"></i>
                 </div>
                 <div class="comment">
-                    i am really waiting to see this shieet
+                   shits reaal!!
                 </div>
             </div>
         </div>
@@ -168,7 +168,7 @@
         <div class="box">
             <i class="fas fa-quote-right"></i>
             <div class="user">
-                <img src="images/pic2.png" alt="">
+                <img src="" alt="">
                 <h3>samuel makuthu</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -187,7 +187,7 @@
             <i class="fas fa-quote-right"></i>
             <div class="user">
                 <img src="images/pic3.png" alt="">
-                <h3>jackson beniah</h3>
+                <h3>Quintone Mark "Bola"</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -196,7 +196,7 @@
                     <i class="far fa-star"></i>
                 </div>
                 <div class="comment">
-                    as a man of god i have nothing to say
+                    damn this thing is liiiiit!!
                 </div>
             </div>
         </div>
@@ -241,7 +241,7 @@
 
         <div class="box">
             <h3 class="title">premium</h3>
-            <div class="price"><ksh class="2500"></ksh><span>/monthly</span></div>
+            <div class="price">3000</ksh><span>/monthly</span></div>
             <ul>
                 <li> <i class="fas fa-check"></i> 1000+ downloads </li>
                 <li> <i class="fas fa-check"></i> No transaction fees </li>
@@ -334,7 +334,7 @@
             </div>
             <div class="info">
                 <i class="fas fa-envelope"></i>
-                <p> WANANGWATI@gmail.com <br> STOUDCODES@gmail.com </p>
+                <p> codelab@gmail.com <br> STOUDCODES@gmail.com </p>
             </div>
             <div class="info">
                 <i class="fas fa-map-marker-alt"></i>
