--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <div class="box">
             <i class="fas fa-quote-right"></i>
             <div class="user">
-                <img src="" alt="">
+                <img src="asiga.jpg" alt="">
                 <h3>Asiga Wycliffe</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
